fix cover image and field widths on mobile

--- a/app/assets/stylesheets/sumofus/global/components/button.scss
+++ b/app/assets/stylesheets/sumofus/global/components/button.scss
@@ -1,6 +1,5 @@
 .button {
   width: 100%;
-  max-width: 300px;
   height: 60px;
   border: none;
   color: white;
