--- a/app/assets/stylesheets/sumofus/global/components/form.scss
+++ b/app/assets/stylesheets/sumofus/global/components/form.scss
@@ -25,7 +25,6 @@
       width: 100%;
       outline: none;
       box-sizing: border-box;
-      max-width: 300px;
 
       &:focus {
         border-color: $teal;
