--- a/app/assets/stylesheets/sumofus/pages/campaign_page.scss
+++ b/app/assets/stylesheets/sumofus/pages/campaign_page.scss
@@ -4,6 +4,7 @@
   width: 100%;
   overflow: hidden;
   position: relative;
+  background-size: cover;
 
   &__img img {
     width: 100%;
